# deploy_mcp_server

./: .gitignore  main.py  pyproject.toml  requirements.txt  server.py  vercel.json
api/: index.py
fastapi_example/: echo_server.py  math_server.py  server.py
