[project]
name = "remote-server-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.135.1",
    "langgraph>=1.0.10",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
    "uvicorn>=0.41.0",
]
